# docbridge

./: LICENSE  README.md  pyproject.toml
docs/: AI编码任务_PDF转Word与验证提示词.md  verification.md
fixtures/: sample.md
scripts/: build_sample_pdf.py  debug_pdf_layout.py  generate_fixture_images.py  verify_fixture.sh
src/docbridge/: __init__.py  api.py  base.py  conversion_logging.py  convert_progress.py  exceptions.py  path_extensions.py  registry.py
src/docbridge/cli/: main.py
src/docbridge/converters/: __init__.py  _pdf2docx_progress.py  docx_md.py  docx_pdf.py  md_common.py  md_docx.py  md_docx_fonts.py  md_html_docx.py  md_math.py  md_pdf.py  md_theme.py  pdf_docx.py  pdf_docx_postprocess.py
tests/: test_docx_md.py  test_docx_pdf.py  test_md_docx.py  test_md_math.py  test_md_pdf.py  test_path_extensions.py  test_pdf2docx.py  test_registry.py  test_registry_md.py
