[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbridge"
dynamic = ["version"]
description = "可扩展的文档格式转换库与 CLI（PDF/MD→Word、MD→PDF 等）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DocBridge Contributors" }]
keywords = ["pdf", "docx", "convert", "document"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
]

[project.urls]
Repository = "https://github.com/bupt-yxp/docbridge"

dependencies = [
  "pdf2docx>=0.5.8,<0.6",
  "click>=8.1,<9",
  "markdown>=3.5,<4",
  "beautifulsoup4>=4.12,<5",
  "python-docx>=1.1,<2",
  "pillow>=10,<12",
]

[project.optional-dependencies]
pdf = [
  "weasyprint>=60,<65",
]
dev = [
  "pytest>=7,<9",
  "pytest-cov>=4,<7",
  "ruff>=0.4,<1",
]

[project.scripts]
docbridge = "docbridge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "docbridge._version.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
